# beast-mailbox-osx

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  INTEGRATION_EXAMPLE.md  Makefile  PROJECT_SUMMARY.md  PYPI_PUBLISH_INSTRUCTIONS.md  PYPI_SETUP.md  README.md  SETUP_GITHUB.md  TEST_SUMMARY.md  pyproject.toml  requirements-dev.txt  run_tests.sh  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
src/beast_mailbox_osx/: __init__.py  _osxcore.c
tests/: test_import.py  test_osx_functions.py
