[build-system]
requires = ["setuptools>=68", "wheel", "cibuildwheel>=2.20"]
build-backend = "setuptools.build_meta"

[project]
name = "beast-mailbox-osx"
version = "0.1.0"
description = "macOS-native extensions for Beast Mailbox (universal2 C extension)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{ name="nkllon", email="nkllon@users.noreply.github.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Operating System :: MacOS",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
Homepage = "https://github.com/nkllon/beast-mailbox-osx"
Repository = "https://github.com/nkllon/beast-mailbox-osx"
Issues = "https://github.com/nkllon/beast-mailbox-osx/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "cibuildwheel>=2.20.0",
  "build>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--cov=src/beast_mailbox_osx",
  "--cov-report=xml",
  "--cov-report=term-missing",
  "--verbose",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.cibuildwheel]
build = "cp3?-*"
archs = ["universal2"]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
